Finished table part in index html

--- a/index.html
+++ b/index.html
@@ -42,6 +42,59 @@
             </section>
             <!-- Image Area End -->
 
+            <!-- Available Cat Table -->
+            <h3>Cat Details</h3>
+            <table border="2">
+                <caption>Available Cat Details</caption>
+                <thead>
+                    <tr>
+                        <td><b>Name</b></td>
+                        <td><b>Gender</b></td>
+                        <td><b>Age</b></td>
+                        <td><b>Special Needs</b></td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Sahara</td>
+                        <td>Female</td>
+                        <td>Senior</td>
+                        <td>No</td>
+                    </tr>
+                    <tr>
+                        <td>Fifi</td>
+                        <td>Female</td>
+                        <td>Adult</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr>
+                        <td>Billiam</td>
+                        <td>Male</td>
+                        <td>Senior</td>
+                        <td>No</td>
+                    </tr>
+                    <tr>
+                        <td>Jasper</td>
+                        <td>Male</td>
+                        <td>Adult</td>
+                        <td>No</td>
+                    </tr>
+                    <tr>
+                        <td>Ziggy</td>
+                        <td>Male</td>
+                        <td>Adult</td>
+                        <td>No</td>
+                    </tr>
+                    <tr>
+                        <td>Tilly</td>
+                        <td>Female</td>
+                        <td>Adult</td>
+                        <td>No</td>
+                    </tr>
+                </tbody>
+            </table>
+            <!-- Avail Cat Table End -->
+
         </main>
         <!-- Main Area End -->
 
