--- a/signup.html
+++ b/signup.html
@@ -25,26 +25,32 @@
         <!-- Main Area -->
         <main>
             <form action="/volunteer" method="post">
-                <legend>Signup for Volunteer</legend>
+                <fieldset>
+                    <legend>Signup for Volunteer</legend>
 
-                <label>Enter your full name</label>
-                <input type="text" name="name"><br>
+                    <label>Enter your full name</label><br>
+                    <input type="text" name="name"><br>
 
-                <label>Enter your email</label>
-                <input type="email" name="email"><br>
+                    <label>Enter your email</label><br>
+                    <input type="email" name="email"><br>
 
-                <label>Enter your phone</label>
-                <input type="tel" name="phone"><br>
-                <br>
+                    <label>Enter your phone</label><br>
+                    <input type="tel" name="phone"><br>
+                    <br>
 
-                <label>How should we contact you?</label>
-                <input type="radio" name="contact" value="contact_Email">
-                <label>Email</label>
-                <input type="radio" name="contact" value="contact_Phone">
-                <label>Phone</label><br>
+                    <label>How should we contact you?</label><br>
+                    <input type="radio" name="contact" value="contact_Email">
+                    <label>Email</label>
+                    <input type="radio" name="contact" value="contact_Phone">
+                    <label>Phone</label><br>
 
-                <label>Why do you sign up for volunteer?</label>
-                <textarea name="reason_For_Volunteer" cols="30" rows="3"></textarea><br>
+                    <br>
+                    <label>Why do you sign up for volunteer?</label><br>
+                    <textarea name="reason_For_Volunteer" cols="30" rows="3"></textarea><br>
+
+                    <br>
+                    <input type="submit" value="Signup">
+                </fieldset>
             </form>
 
 
