Added cat search form in the Adoption Info html.

--- a/adoption_Info.html
+++ b/adoption_Info.html
@@ -43,6 +43,37 @@
             </section>
             <!-- Cat Adopting Info Area End -->
 
+            <!-- Search Cat Form Area -->
+            <form action="/Find" method="post">
+                <fieldset>
+                    <label>Location</label><br>
+                    <input type="text" name="location"><br>
+                    <br>
+
+                    <label>Cat Age</label><br>
+                    <input type="checkbox" name="cat_Age" value="cat_Age_Kitten">
+                    <label>Kitten</label><br>
+                    <input type="checkbox" name="cat_Age" value="cat_Age_Young">
+                    <label>Young</label><br>
+                    <input type="checkbox" name="cat_Age" value="cat_Age_Adult">
+                    <label>Audlt</label><br>
+                    <input type="checkbox" name="cat_Age" value="cat_Age_Senior">
+                    <label>Senior</label><br>
+                    <br>
+
+                    <label>Cat Sex</label><br>
+                    <input type="checkbox" name="cat_Sex" value="cat_Sex_Male">
+                    <label>Male</label>
+                    <input type="checkbox" name="cat_Sex" value="cat_Sex_Female">
+                    <label>Female</label>
+                    <br>
+                    <br>
+
+                    <input type="submit" value="Search">
+                </fieldset>
+            </form>
+            <!-- Search Cat Form Area End -->
+
             <img src="images/cat_Adopting_Info_Area_Photo.jpeg" alt="Cute Cat Photo">
 
         </main>
