--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adopt the Perfect Cat</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="container">
-        <Header style="font-size:40px">Adope your Perfect Cat</Header>
-        <p>Adopt true love from shelters, rescues, & private owners</p>
+        <Header>
+            <h1>Adopt your Perfect Cat</h1>
+            <p>Adopt true love from shelters, rescues, & private owners</p>
+        </Header>
+       
 
         <!-- Navigation Area -->
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Adoption Info</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="adoption_Info.html">Adoption Info</a></li>
                 <li><a href="">Cat Care & Health</a></li>
-                <li><a href="">Signup</a></li>
+                <li><a href="signup.html">Signup</a></li>
             </ul>
         </nav>
         <!-- Navigation Area End -->
