--- a/signup.html
+++ b/signup.html
@@ -14,10 +14,10 @@
         <!-- Navigation Area -->
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Adoption Info</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="adoption_Info.html">Adoption Info</a></li>
                 <li><a href="">Cat Care & Health</a></li>
-                <li><a href="">Signup</a></li>
+                <li><a href="signup.html">Signup</a></li>
             </ul>
         </nav>
         <!-- Navigation Area End -->
