Finished first page headings, paragraphs, lists, text links, images

--- a/adoption_Info.html
+++ b/adoption_Info.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adopt the Perfect Cat</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="container">
-        <Header style="font-size:40px">Adope your Perfect Cat</Header>
-        <p>Adopt true love from shelters, rescues, & private owners</p>
+        <Header>
+            <h1>Adopt your Perfect Cat</h1>
+            <p>Adopt true love from shelters, rescues, & private owners</p>
+        </Header>
 
         <!-- Navigation Area -->
         <nav>
