--- a/index.html
+++ b/index.html
@@ -36,19 +36,26 @@
             <!-- Image Area -->
             <section>
                 <ul id="cat_Adoption_Photo">
-                    <li class="catAdoptionForNow"><img src="images/Sahara.jpeg" alt="Sahara"></li>
-                    <p>Sahara</p>
-                    <li class="catAdoptionForNow"><img src="images/Billiam.jpeg" alt="Billiam"></li>
-                    <p>Billiam</p>
-                    <li class="catAdoptionForNow"><img src="images/Jasper.jpeg" alt="Jasper"></li>
-                    <p>Jasper</p>
+                    <li class="catAdoptionForNow">
+                        <img src="images/Sahara.jpeg" alt="Sahara">
+                        <p>Sahara</p>
+                    </li>
+                    <li class="catAdoptionForNow">
+                        <img src="images/Billiam.jpeg" alt="Billiam">
+                        <p>Billiam</p>
+                    </li>
+                    <li class="catAdoptionForNow">
+                        <img src="images/Jasper.jpeg" alt="Jasper">
+                        <p>Jasper</p>
+                    </li>
+                    
                 </ul>
             </section>
             <!-- Image Area End -->
 
             <!-- Available Cat Table -->
             <h3>Cat Details</h3>
-            <table border="2">
+            <table>
                 <caption>Available Cat Details</caption>
                 <thead>
                     <tr>
