Finished CSS table section.

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                 <caption>Available Cat Details</caption>
                 <thead>
                     <tr>
-                        <td><b>Name</b></td>
-                        <td><b>Gender</b></td>
-                        <td><b>Age</b></td>
-                        <td><b>Special Needs</b></td>
+                        <td>Name</td>
+                        <td>Gender</td>
+                        <td>Age</td>
+                        <td>Special Needs</td>
                     </tr>
                 </thead>
                 <tbody>
@@ -108,7 +108,7 @@
 
             <!-- Things about Cat Adoption Area -->
             <h3>Tips for Day One with Your New Cat / Kitten</h3>
-            <p>There's lots you can do within in the first day to ease your new kitten / cat adoption into your home. When you arrive, select a quiet, closed-in area such as your bedroom or a small room away from the main foot traffic, and set it up with a litter box, bed, food and water. If you are adopting an adult cat, be sure that this "starter room" has locked screens, or keep the windows completely closed. If feasible, make the starter room the permanent location of the litter box. If you plan on having the permanent location of the litter box be elsewhere, you'll need two litter boxes. Please do consider the advantages of keeping your new cat indoors always — outdoor cats are exposed to disease, cat fights, being killed by dogs and other wild animals, and hit by cars. If you have other pets, don't introduce the new pet immediately. Let your new cat get to know and trust household members, before it must adjust to the entire home. For more on each of these tips visit our blog.</p><br>
+            <p>There's lots you can do within in the first day to ease your new kitten / cat adoption into your home. When you arrive, select a quiet, closed-in area such as your bedroom or a small room away from the main foot traffic, and set it up with a litter box, bed, food and water. If you are adopting an adult cat, be sure that this "starter room" has locked screens, or keep the windows completely closed. If feasible, make the starter room the permanent location of the litter box. If you plan on having the permanent location of the litter box be elsewhere, you'll need two litter boxes. Please do consider the advantages of keeping your new cat indoors always — outdoor cats are exposed to disease, cat fights, being killed by dogs and other wild animals, and hit by cars. If you have other pets, don't introduce the new pet immediately. Let your new cat get to know and trust household members, before it must adjust to the entire home. For more on each of these tips visit our blog.</p>
 
             <h3>Introducing Cats & Kittens</h3>
             <p>Based on their age and personalities, you may take days or months to fully integrate your new cat adoption or kitten to your family pets. Generally it's believed the easiest introduction is when the new cat is younger, smaller, and of the opposite sex, but it really depends on the personalities and experiences of the felines involved. First always make sure each cat is healthy so that it does not transmit a disease. Neutering/spaying of all cats to be introduced is essential, ideally 2-4 weeks before the introduction, so the hormones levels have time to subside. The first step is to confine the new cat to one room with its litter box, food, water, and a bed. Feed your current cat(s) and the newcomer on either side of the door to this room. After the 7-10 day isolation period is done, and your new cat is healthy, you can progress to the next steps. For each step please read this post</p>
