Finished CSS Form.

--- a/adoption_Info.html
+++ b/adoption_Info.html
@@ -49,28 +49,25 @@
             <!-- Search Cat Form Area -->
             <form action="/Find" method="post">
                 <fieldset>
-                    <label>Location</label><br>
-                    <input type="text" name="location"><br>
-                    <br>
+                    <legend>Search your cat</legend>
+                    <label>Location</label>
+                    <input type="text" name="location">
 
-                    <label>Cat Age</label><br>
+                    <label>Cat Age</label>
                     <input type="checkbox" name="cat_Age" value="cat_Age_Kitten">
-                    <label>Kitten</label><br>
+                    <span>Kitten</span>
                     <input type="checkbox" name="cat_Age" value="cat_Age_Young">
-                    <label>Young</label><br>
+                    <span>Young</span>
                     <input type="checkbox" name="cat_Age" value="cat_Age_Adult">
-                    <label>Audlt</label><br>
+                    <span>Audlt</span>
                     <input type="checkbox" name="cat_Age" value="cat_Age_Senior">
-                    <label>Senior</label><br>
-                    <br>
+                    <span>Senior</span>
 
-                    <label>Cat Sex</label><br>
+                    <label>Cat Sex</label>
                     <input type="checkbox" name="cat_Sex" value="cat_Sex_Male">
-                    <label>Male</label>
+                    <span>Male</span>
                     <input type="checkbox" name="cat_Sex" value="cat_Sex_Female">
-                    <label>Female</label>
-                    <br>
-                    <br>
+                    <span>Female</span>
 
                     <input type="submit" value="Search">
                 </fieldset>
