Finished Footer area.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Adopt the Perfect Cat</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -117,6 +119,27 @@
 
         </main>
         <!-- Main Area End -->
+
+        <!-- Footer Area -->
+        <footer>
+            <div id="nondisclaimer">
+                <!-- Copyright -->
+                <div class="copy"> &copy;Copyright 2022 :: Miao</div>
+
+                <!-- Social Image Area -->
+                <div class="social">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                </div>
+                <!-- Social Image Area End -->
+
+            </div>
+            <div id="disclaimer">
+                <p>This website is designed and created by Miao for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use</p>
+            </div>
+        </footer>
+        <!-- Footer Area -->
 
     </div>
     
