Added Photo section in Adoption Info page.

--- a/adoption_Info.html
+++ b/adoption_Info.html
@@ -76,6 +76,43 @@
             </form>
             <!-- Search Cat Form Area End -->
 
+            <!-- Image Area -->
+            <section>
+                <ul id="cat_Adoption_Photo">
+                    <li class="Photo">
+                        <img src="images/Fifi.jpeg" alt="Fifi">
+                    </li>
+                    <li class="Photo">
+                        <img src="images/Toothless.jpeg" alt="Toothless">
+                    </li>
+                    <li class="Photo">
+                        <img src="images/Henry.jpeg" alt="Henry">
+                    </li>
+                    <li class="Photo">
+                        <img src="images/Marvin.jpeg" alt="Marvin">
+                    </li>
+                    <li class="Photo">
+                        <img src="images/Rosie.jpeg" alt="Rosie">
+                    </li>
+                    <li class="Photo">
+                        <img src="images/Jasper.jpeg" alt="Jasper">
+                    </li>
+                    <li class="Photo">
+                        <img src="images/Mini.jpeg" alt="Mini">
+                    </li>
+                    <li class="Photo">
+                        <img src="images/Dexter.jpeg" alt="Dexter">
+                    </li>
+                    <li class="Photo">
+                        <img src="images/Billiam.jpeg" alt="Billiam">
+                    </li>
+                    <li class="Photo">
+                        <img src="images/Sahara.jpeg" alt="Sahara">
+                    </li>
+                </ul>
+            </section>
+            <!-- Image Area End -->
+
             <img src="images/cat_Adopting_Info_Area_Photo.jpeg" alt="Cute Cat Photo">
 
         </main>
