--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Adopt the Perfect Cat</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="index">
     <div id="container">
         <Header>
             <h1>Adopt your Perfect Cat</h1>
@@ -37,7 +37,7 @@
 
             <!-- Image Area -->
             <section>
-                <ul id="cat_Adoption_Photo">
+                <ul id="cat_Adoption_Photo_Card">
                     <li class="catAdoptionForNow">
                         <img src="images/Sahara.jpeg" alt="Sahara">
                         <p>Sahara</p>
