--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="adoption_Info.html">Adoption Info</a></li>
-                <li><a href="">Cat Care & Health</a></li>
+                <li><a href="gallery.html">Cat Gallery</a></li>
                 <li><a href="signup.html">Signup</a></li>
             </ul>
         </nav>
